modif task icon

--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,13 @@
   font-family: 'Kodchasan';
 
 }
-
-body {
+*, ::before , ::after{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
+ 
   background-color: rgb(31, 31, 31);
   min-height: 100vh;
 }
